--- a/_includes/debug-script.html
+++ b/_includes/debug-script.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
   var pagePath = "{{- page.path -}}";
   var pageDir  = "{{- page.dir -}}";
   console.log('pagePath:', pagePath, 'pageDir:', pageDir);
