all file json 변환 디버깅

--- a/_includes/debug-script.html
+++ b/_includes/debug-script.html
@@ -1,7 +1,7 @@
 <script>
 
-  var allFiles = "{{- all_files_json -}}";
-  var allPages = "{{- all_pages_json -}}";
+  var allFiles = {{- all_files_json -}};
+  var allPages = {{- all_pages_json -}};
 
   console.log('allFiles:', allFiles);
   console.log('allPages:', allPages);
