--- a/_includes/debug-script.html
+++ b/_includes/debug-script.html
@@ -6,9 +6,10 @@
 
   console.log('site:', site);
   console.log('page:', page);
+  console.log('dir_tree:', dir_tree);
   console.log('allFiles:', allFiles);
   console.log('allPages:', allPages);
-
+  
  /*
   var pagePath = "{{- page.path -}}";
   var pageDir  = "{{- page.dir -}}";
