--- a/_includes/debug-script.html
+++ b/_includes/debug-script.html
@@ -1,6 +1,7 @@
 <script>
   var site = {{- site_json -}};
   var page = {{- page_json -}};
+  var dirTree = {{- dir_tree -}};
   var allFiles = {{- all_files_json -}};
   var allPages = {{- all_pages_json -}};
 
