--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -629,9 +629,13 @@
     });
     </script>
   
+{%- comment -%}
   {% include file-list-logic.liquid %}
-  {% include json-capture.liquid %}
+  {% include site_info.liquid %}
   {% include debug-script.html %}
+{% endcomment %}
+
+  {% include site_info.html %}
 
 </head>
 <body>
