스크립트 수정

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -628,14 +628,8 @@
         }
     });
     </script>
-  
-{%- comment -%}
-  {% include file-list-logic.liquid %}
-  {% include site_info.liquid %}
-  {% include debug-script.html %}
-{% endcomment %}
-
-  {% include site_info.html %}
+    
+    {%- include site_info.html -%}
 
 </head>
 <body>
