include unless 오류 수정

--- a/_includes/helper_c0z0c_dev.liquid
+++ b/_includes/helper_c0z0c_dev.liquid
@@ -6,7 +6,7 @@
 {% assign cur_file_dir = cur_dir %}
 {% assign cur_page_dir = page.dir %}
 
-{% unless cur_file_dir %}
+{% if cur_file_dir == nil or cur_file_dir == "" %}
   {% assign cur_dirs = "" %}
   {% assign cur_files = "" %}
 {% else %}
