--- a/_includes/helper_c0z0c_dev.liquid
+++ b/_includes/helper_c0z0c_dev.liquid
@@ -13,7 +13,7 @@
 
   {% assign cur_files = "" %}
   {% for f in all_files %}
-    {% assign f_deep = f.path | split "/" %}
+    {% assign f_deep = f.path | split: "/" %}
     {% if f.dir | slice: 0, cur_file_dir | size == cur_file_dir %}
       {% assign cur_files = cur_files | push: f %}
     {% endif %}
@@ -21,7 +21,7 @@
 
   {% assign cur_pages = "" %}
   {% for f in all_pages %}
-    {% assign f_deep = f.path | split "/" %}
+    {% assign f_deep = f.path | split: "/" %}
     {% if f.dir | slice: 0, cur_page_dir | size == cur_page_dir %}
       {% assign cur_pages = cur_pages | push: f %}
     {% endif %}
