--- a/_includes/helper_c0z0c_dev.liquid
+++ b/_includes/helper_c0z0c_dev.liquid
@@ -11,7 +11,7 @@
   {% assign cur_files = "" %}
 {% else %}
 
-  {% assign cur_files = "" %}
+  {% assign cur_files = "" | split: "" %}
   {% for f in all_files %}
     {% assign f_deep = f.path | split: "/" %}
     {% if f.dir | slice: 0, cur_file_dir | size == cur_file_dir %}
@@ -19,7 +19,7 @@
     {% endif %}
   {% endfor %}
 
-  {% assign cur_pages = "" %}
+  {% assign cur_pages = "" | split: "" %}
   {% for f in all_pages %}
     {% assign f_deep = f.path | split: "/" %}
     {% if f.dir | slice: 0, cur_page_dir | size == cur_page_dir %}
