--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
             font-size: 1.2em;
         }
         .highlight {
-            background-color: #2a5a2a;
+            background-color: #102040; /* #2a5a2a-> 어두운 파란색으로 변경 */
             color: #c8e6c9;
             padding: 15px;
             border-radius: 8px;
