--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,11 +113,11 @@
             font-size: 1.2em;
         }
         .highlight {
-            background-color: #102040; /* #2a5a2a-> 어두운 파란색으로 변경 */
+            background-color: #404040;
             color: #c8e6c9;
             padding: 15px;
             border-radius: 8px;
-            border-left: 4px solid #4caf50;
+            border-left: 4px solid #303030;
             margin: 20px 0;
         }
         /* 리스트 스타일 개선 */
