스터디 파일 리스트 스타일 변경

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -419,7 +419,10 @@
     });
     </script>
     
-    {%- include site_info.html -%}
+    <script>
+        var branch = "master";
+        {% include site_info.html %}
+    </script>
 
 </head>
 <body>
