--- a/_includes/cur_files.liquid
+++ b/_includes/cur_files.liquid
@@ -1,37 +1,31 @@
-
-{%- assign all_files = site.static_files -%}
+{% assign all_files = site.static_files %}
 {%- assign all_pages = site.pages -%}
 
 {%- assign cur_file_dir = cur_dir -%}
 {%- assign cur_page_dir = page.dir -%}
 
-{%- if cur_file_dir == nil or cur_file_dir == "" -%}
+{% if cur_file_dir == nil or cur_file_dir == "" %}
   {%- assign cur_dirs = "" -%}
   {%- assign cur_files = "" -%}
-{%- else -%}
 
-  {%- assign cur_deep = cur_file_dir | split: "/" -%}
-  {%- assign cur_deep_size = cur_deep | size -%}
+{% else %}
 
-<!--
-  console.log('cur_file_dir:', {{- cur_file_dir -}});
-  console.log('cur_page_dir:', {{- cur_page_dir -}});
-  console.log('cur_deep_size:', {{- cur_deep_size -}});
--->
+  {%- if cur_file_dir == "/" -%}
+    {%- assign cur_deep_size = 1 -%}
+  {%- else -%}
+    {%- assign cur_deep = cur_file_dir | split: "/" | reject: "" -%}
+    {%- assign cur_deep_size = cur_deep | size -%}
+  {%- endif -%}
 
-  <!-- fiels -->
-  console.group('files');
-  {%- for f in all_files -%}
-    {%- assign f_deep = f.path | split: "/" -%}
+  {%- comment -%} files {%- endcomment -%}
+  {% for f in all_files %}
+    {%- assign f_deep = f.path | split: "/" | reject: "" -%}
     {%- assign f_deep_size = f_deep | size | minus: 1 -%}
-    console.log('f.path:', ' ({{ cur_deep_size }},{{ f_deep_size }}) {{- f.path -}}');
-  {%- endfor -%}
-  console.groupEnd();
+  {% endfor %}
 
-  console.group('cur files');
   {%- assign cur_files = "" | split: "" -%}
   {%- for f in all_files -%}
-    {%- assign f_deep = f.path | split: "/" -%}
+    {%- assign f_deep = f.path | split: "/" | reject: "" -%}
     {%- assign f_deep_size = f_deep | size | minus: 1 -%}
 
     {%- assign cur_file_dir_len = cur_file_dir | size -%}
@@ -45,30 +39,25 @@
         {%- assign f_s_path = f.path | slice: 0, 1 -%}
         {%- assign f_e_path = f.path | slice: -1, 1 -%}
         {%- assign cur_files = cur_files | push: f -%}
-        console.log('f.path:', ' ({{ cur_deep_size }},{{ f_deep_size }}) {{- f.path -}}');
       {%- endif -%}
     {%- endif -%}
-  {%- endfor -%}
-  console.groupEnd();
+  {% endfor %}
 
-
-  <!-- pages -->
-console.group('pages');
+  {%- comment -%} pages {%- endcomment -%}
   {%- for f in all_pages -%}
     {%- assign f_path = "/" | append: f.path -%}
-    {%- assign f_deep = f_path | split: "/" -%}
+    {%- assign f_deep = f_path | split: "/" | reject: "" -%}
     {%- assign f_deep_size = f_deep | size | minus: 1 -%}
-    console.log('f.path:', ' ({{ cur_deep_size }},{{ f_deep_size }}) {{- f_path -}}');
-  {%- endfor -%}
-console.groupEnd();
+  {% endfor %}
 
-console.group('cur pages');
   {%- assign cur_pages = "" | split: "" -%}
   {%- for f in all_pages -%}
     {%- assign f_path = "/" | append: f.path -%}
-    {%- assign f_deep = f_path | split: "/" -%}
+    
+    {%- assign f_deep = f_path | split: "/" | reject: "" -%}
     {%- assign f_deep_sub_size = f_deep | size -%}
     {%- assign f_deep_size = f_deep | size | minus: 1 -%}
+
     {%- assign cur_page_dir_len = cur_dir | size -%}
     {%- assign f_path_start = f_path | slice: 0, cur_page_dir_len -%}
     {%- assign f_s_path = f_path | slice: 0, 1 -%}
@@ -78,31 +67,25 @@ console.group('cur pages');
       {%- if cur_deep_size == f_deep_size -%}
         {%- assign f_s_path = f_path | slice: 0, 1 -%}
         {%- assign f_e_path = f_path | slice: -1, 1 -%}
-        {%- assign cur_pages = cur_pages | push: f -%}
-        console.log('f.path:', ' ({{ cur_deep_size }},{{ f_deep_size }}) {{- f_path -}}');
-
-      {% elsif cur_deep_size == f_deep_sub_size and f.name == 'index.md' -%}
-        {%- assign cur_pages = cur_pages | push: f -%}
-        console.log('f.path:', ' ({{ cur_deep_size }},{{ f_deep_size }}) {{- f_path -}}');
-
+        {% assign cur_pages = cur_pages | push: f %}
+      {%- elsif cur_deep_size == f_deep_sub_size and f.name == 'index.md' -%}
+        {% assign cur_pages = cur_pages | push: f %}
       {% else %}
-        console.log('* f.path:', ' ({{ cur_deep_size }},{{ f_deep_size }}) {{- f_path -}}');
-
       {%- endif -%}
     {%- endif -%}
-  {%- endfor -%}
-console.groupEnd();
+  {% endfor %}
 
   {%- capture cur_files_json -%}
   [
   {%- for f in cur_files -%}
     {
-      "name": {{- f.name | jsonify -}},
-      "path": {{- f.path | jsonify -}},
-      "extname": {{- f.extname | jsonify -}},
-      "modified_time": {{- f.modified_time | jsonify -}},
-      "basename": {{- f.basename | default: "" | jsonify -}},
-      "url": {{- f.url | default: "" | jsonify -}}
+      "title": {{ f.basename | default: "" | jsonify }},
+      "name": {{ f.name | default: "" | jsonify }},
+      "basename": {{ f.basename | default: "" | jsonify }},
+      "extname": {{ f.extname | default: "" | jsonify }},
+      "modified_time": {{ f.modified_time | date: "%Y-%m-%d %H:%M:%S" | default: "" | jsonify }},
+      "path": {{ f.path | default: "" | jsonify }},
+      "url": {{ f.url | default: "" | jsonify }}
     }{%- unless forloop.last -%},{%- endunless -%}
   {%- endfor -%}
   ]
@@ -111,20 +94,76 @@ console.groupEnd();
   {%- capture cur_pages_json -%}
   [
   {%- for p in cur_pages -%}
+  {%- assign p_path = "/" | append: p.path -%}
     {
-      "title": {{- p.title | jsonify -}},
-      "url": {{- p.url | jsonify -}},
-      "path": {{- "/" | append: p.path | jsonify -}},
-      "dir": {{- p.dir | jsonify -}},
-      "name": {{- p.name | default: "" | jsonify -}},
-      "layout": {{- p.layout | default: "" | jsonify -}},
-      "date": {{- p.date | default: "" | jsonify -}},
-      "excerpt": {{- p.excerpt | default: "" | jsonify -}},
-      "categories": {{- p.categories | default: "" | jsonify -}},
-      "tags": {{- p.tags | default: "" | jsonify -}}
+      "title": {{ p.title | default: "" | jsonify }},
+      "name": {{ p.name | default: "" | jsonify }},
+      "basename": {{ p.name | remove: ".md" | default: "" | jsonify }},
+      "extname": {{ ".md" | jsonify }},
+      "modified_time": {{ p.date | date: "%Y-%m-%d 00:00:00" | default: "" | jsonify }},
+      "url": {{ p.url | default: "" | jsonify }},
+      "path": {{ f_path | default: "" | jsonify }},
+      "dir": {{ p.dir | default: "" | jsonify }},
+      "layout": {{ p.layout | default: "" | jsonify }},
+      "date": {{ p.date | date: "%Y-%m-%d" | default: "" | jsonify }},
+      "excerpt": {{ p.excerpt | default: "" | strip_html | truncate: 100 | jsonify }},
+      "categories": {{ p.categories | default: array | jsonify }},
+      "tags": {{ p.tags | default: array | jsonify }}
     }{%- unless forloop.last -%},{%- endunless -%}
   {%- endfor -%}
   ]
   {%- endcapture -%}
+{% endif %}
 
-{%- endif -%}
+{%- comment -%} 서브 폴더 가져오기 files {%- endcomment -%}
+{%- assign sub_folder = "" | split: "" -%}
+{%- for f in all_files -%}
+  {%- assign f_deep = f.path | split: "/" | reject: "" -%}
+  {%- assign f_deep_size = f_deep | size | minus: 2 -%}
+
+  {%- assign cur_file_dir_len = cur_file_dir | size -%}
+  {%- assign f_path_start = f.path | slice: 0, cur_file_dir_len -%}
+  {%- assign f_path_last = f.path | remove_first: cur_file_dir -%}
+  {%- if f_path_start == cur_file_dir -%}
+    {%- if cur_deep_size == f_deep_size -%}
+      {%- assign path_parts = f_path_last | split: '/' -%}
+      {%- if path_parts.size > 1 -%}
+        {%- assign folder = path_parts[0] -%}
+        {%- unless sub_folder contains folder or folder == '' or folder contains '.' or folder == 'assets' or folder == '_layouts' -%}
+          {% assign sub_folder = sub_folder | push: folder %}
+        {%- endunless -%}
+      {%- endif -%}
+    {%- endif -%}
+  {%- endif -%}
+{% endfor %}
+
+{%- comment -%} 서브 폴더 가져오기 pages {%- endcomment -%} 
+{%- for f in all_pages -%}
+  {%- assign f_path = "/" | append: f.path -%}
+  
+  {%- assign f_deep = f_path | split: "/" | reject: "" -%}
+  {%- assign f_deep_size = f_deep | size | minus: 2 -%}
+
+  {%- assign cur_file_dir_len = cur_file_dir | size -%}
+  {%- assign f_path_start = f_path | slice: 0, cur_file_dir_len -%}
+  {%- assign f_path_last = f_path | remove_first: cur_file_dir -%}
+  {%- if f_path_start == cur_file_dir -%}
+    {%- if cur_deep_size == f_deep_size -%}
+      {%- assign path_parts = f_path_last | split: '/' -%}
+      {%- if path_parts.size > 1 -%}
+        {%- assign folder = path_parts[0] -%}
+        {%- unless sub_folder contains folder or folder == '' or folder contains '.' or folder == 'assets' or folder == '_layouts' -%}
+          {% assign sub_folder = sub_folder | push: folder %}
+        {%- endunless -%}
+      {%- endif -%}
+    {%- endif -%}
+  {%- endif -%}
+{% endfor %}
+
+{% capture sub_folder_json %}
+[
+{%- for folder in sub_folder -%}
+  {{- folder | jsonify -}}{%- unless forloop.last -%},{%- endunless -%}
+{% endfor %}
+]
+{% endcapture %}
