--- a/_includes/site_info.html
+++ b/_includes/site_info.html
@@ -1,4 +1,3 @@
-<script>
 
 {%- comment -%} 현재 페이지의 페이지 목록을 가져온다 {%- endcomment -%} 
 
@@ -29,48 +28,89 @@ page.date : 게시 날짜(게시글일 경우)
 page.content : 페이지의 실제 내용(HTML로 변환됨)
 page.excerpt : 요약(게시글일 경우)
 page.categories, page.tags : 카테고리/태그(게시글일 경우
-
 {%- endcomment -%} 
 
 {%- capture site_json -%}
   {
-    "title": {{- site.title | jsonify -}},
-    "description": {{- site.description | jsonify -}},
-    "url": {{- site.url | jsonify -}},
-    "baseurl": {{- site.baseurl | jsonify -}},
-    "time": {{- site.time | jsonify -}},
-    "posts": {{- site.posts | size | jsonify -}},
-    "pages": {{- site.pages | size | jsonify -}},
-    "static_files": {{- site.static_files | size | jsonify -}},
-    "data": {{- site.data | size | jsonify -}},
-    "collections": {{- site.collections | size | jsonify -}},
-    "documents": {{- site.documents | size | jsonify -}},
-    "categories": {{- site.categories | size | jsonify -}},
-    "tags": {{- site.tags | size | jsonify -}},
-    "config": {{- site.config | size | jsonify -}}
+    "title": {{ site.title | default: "" | jsonify }},
+    "description": {{ site.description | default: "" | jsonify }},
+    "url": {{ site.url | default: "" | jsonify }},
+    "baseurl": {{ site.baseurl | default: "" | jsonify }},
+    "time": {{ site.time | date: "%Y-%m-%d %H:%M:%S" | jsonify }},
+    "posts": {{ site.posts | size }},
+    "pages": {{ site.pages | size }},
+    "static_files": {{ site.static_files | size }},
+    "data": {{ site.data | size | default: 0 }},
+    "collections": {{ site.collections | size | default: 0 }},
+    "documents": {{ site.documents | size | default: 0 }},
+    "categories": {{ site.categories | size | default: 0 }},
+    "tags": {{ site.tags | size | default: 0 }},
+    "config": {{ site | size | default: 0 }}
   }
 {%- endcapture -%}
 
 {%- capture page_json -%}
   {
-    "title": {{- page.title | jsonify -}},
-    "url": {{- page.url | jsonify -}},
-    "path": {{- page.path | jsonify -}},
-    "dir": {{- page.dir | jsonify -}},
-    "name": {{- page.name | default: "" | jsonify -}},
-    "layout": {{- page.layout | default: "" | jsonify -}},
-    "date": {{- page.date | default: "" | jsonify -}},
-    "content": {{- page.content | default: "" | size | jsonify -}},
-    "excerpt": {{- page.excerpt | default: "" | jsonify -}},
-    "categories": {{- page.categories | default: "" | jsonify -}},
-    "tags": {{- page.tags | default: "" | jsonify -}}
+    "title": {{ page.title | default: "" | jsonify }},
+    "url": {{ page.url | default: "" | jsonify }},
+    "path": {{ page.path | default: "" | jsonify }},
+    "dir": {{ page.dir | default: "" | jsonify }},
+    "name": {{ page.name | default: "" | jsonify }},
+    "layout": {{ page.layout | default: "" | jsonify }},
+    "date": {{ page.date | date: "%Y-%m-%d" | default: "" | jsonify }},
+    "content_length": {{ page.content | default: "" | size }},
+    "excerpt": {{ page.excerpt | default: "" | strip_html | truncate: 200 | jsonify }},
+    "categories": {{ page.categories | default: array | jsonify }},
+    "tags": {{ page.tags | default: array | jsonify }}
   }
 {%- endcapture -%}
-  
-  var site = {{- site_json -}};
-  var page = {{- page_json -}};
 
-  console.log('site:', site);
-  console.log('page:', page);
+{%- assign all_files = site.static_files -%}
+{%- assign all_pages = site.pages -%}
+
+{%- capture all_files_json -%}
+[
+{%- for f in all_files -%}
+  {
+    "title": {{ f.basename | default: "" | jsonify }},
+    "name": {{ f.name | default: "" | jsonify }},
+    "basename": {{ f.basename | default: "" | jsonify }},
+    "extname": {{ f.extname | default: "" | jsonify }},
+    "modified_time": {{ f.modified_time | date: "%Y-%m-%d %H:%M:%S" | default: "" | jsonify }},
+    "path": {{ f.path | default: "" | jsonify }},
+    "url": {{ f.url | default: "" | jsonify }}
+  }{%- unless forloop.last -%},{%- endunless -%}
+{%- endfor -%}
+]
+{%- endcapture -%}
+
+{%- capture all_pages_json -%}
+[
+{%- for p in all_pages -%}
+{%- assign f_path = "/" | append: p.path -%}
+  {
+    "title": {{ p.title | default: "" | jsonify }},
+    "name": {{ p.name | default: "" | jsonify }},
+    "basename": {{ p.name | remove: ".md" | default: "" | jsonify }},
+    "extname": {{ ".md" | jsonify }},
+    "modified_time": {{ p.date | date: "%Y-%m-%d 00:00:00" | default: "" | jsonify }},
+    "url": {{ p.url | default: "" | jsonify }},
+    "path": {{ f_path | default: "" | jsonify }},
+    "dir": {{ p.dir | default: "" | jsonify }},
+    "layout": {{ p.layout | default: "" | jsonify }},
+    "date": {{ p.date | date: "%Y-%m-%d" | default: "" | jsonify }},
+    "excerpt": {{ p.excerpt | default: "" | strip_html | truncate: 100 | jsonify }},
+    "categories": {{ p.categories | default: array | jsonify }},
+    "tags": {{ p.tags | default: array | jsonify }}
+  }{%- unless forloop.last -%},{%- endunless -%}
+{%- endfor -%}
+]
+{% endcapture %}
   
-</script>
+var site = {{ site_json }};
+var page = {{ page_json }};
+
+var allFiles = {{ all_files_json }};
+var allPages = {{ all_pages_json }};
+
+
