docs 및 alph 오류 수정

--- a/_includes/page_values.html
+++ b/_includes/page_values.html
@@ -71,9 +71,9 @@ curFiles.sort((a, b) => {
   var project_url = `https://c0z0c.github.io${project_path}`
   var project_git_url = `https://github.com/c0z0c${project_path}/blob/${branch}/`
   var site_url = `https://c0z0c.github.io${project_path}${curDir}`
-  var raw_url = `https://raw.githubusercontent.com/c0z0c${project_path}/alpha${curDir}`;
-  var git_url = `https://github.com/c0z0c${project_path}/blob/${branch}/docs${curDir}`
-  var colab_url = `https://colab.research.google.com/github/c0z0c${project_path}/blob/alpha${curDir}`;
+  var raw_url = `https://raw.githubusercontent.com/c0z0c${project_path}/master${curDir}`;
+  var git_url = `https://github.com/c0z0c${project_path}/blob/${branch}${curDir}`
+  var colab_url = `https://colab.research.google.com/github/c0z0c${project_path}/blob/master${curDir}`;
 
   console.log('project_url:', project_url);
   console.log('project_git_url:', project_git_url);
