--- a/_includes/page_folders.html
+++ b/_includes/page_folders.html
@@ -92,7 +92,7 @@
     const cleanPath = folderPath.replace(/\/$/, ''); // 끝의 / 제거
     return `
       <a href="${project_url}${cleanPath}/" class="file-action" title="폴더 열기">📖</a>
-      <a href="${project_git_url}docs${cleanPath}/" class="file-action" title="GitHub에서 보기" target="_blank">📂</a>
+      <a href="${project_git_url}${cleanPath}/" class="file-action" title="GitHub에서 보기" target="_blank">📂</a>
     `;
   }
 
